include a css file

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Wide-Fighter</title>
+		<link data-trunk rel="sass" href="css/main.scss" />
 	</head>
 </html>
