--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Wide-Fighter</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link data-trunk rel="sass" href="css/main.scss" />
 	</head>
 </html>
